// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-hint spec: Render logic -> renders with hint text FOO 1`] = `
<amplify-hint>
  <!---->
  <div class="amplify-ui--hint css-k9ji7b">
    FOO
  </div>
</amplify-hint>
`;

exports[`amplify-hint spec: Render logic -> renders with no hint text 1`] = `
<amplify-hint>
  <!---->
  <div class="amplify-ui--hint css-k9ji7b"></div>
</amplify-hint>
`;

exports[`amplify-hint spec: Render logic -> renders without Emotion CSS class when overrideStyle is true 1`] = `
<amplify-hint override-style="true">
  <!---->
  <div class="amplify-ui--hint">
    FOO
  </div>
</amplify-hint>
`;
